Kubernetes/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path: '/metrics'
    prometheus.io/port: '80'
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: air-team-api
  template:
    metadata:
      labels:
        app: air-team-api
    spec:
      containers:
      - name: at-api-instance
        image: docker.pkg.github.com/hvojdani/air-team/air-team-api:0.39.0
        resources:
          limits:
            memory: "150Mi"
            cpu: "1.5"
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: regcred
