Kubernetes/redis-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-cache
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis-instance
        image: redis:alpine
        resources:
          limits:
            memory: "100Mi"
        volumeMounts:
          - mountPath: "/data"
            name: redisdata
        ports:
        - containerPort: 6379
      volumes:
        - name: redisdata
          persistentVolumeClaim:
            claimName: redispvc
