Kubernetes/ui-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-deployment
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: air-team-ui
  template:
    metadata:
      labels:
        app: air-team-ui
    spec:
      containers:
      - name: at-ui-instance
        image: docker.pkg.github.com/hvojdani/air-team/air-team-ui:0.59.0        
        resources:
          limits:
            memory: "64Mi"
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: regcred
