Kubernetes/svc-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: apibackend
spec:
  selector:
    app: air-team-api
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
