Kubernetes/svc-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: uiapp
spec:
  selector:
    app: air-team-ui
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
