Kubernetes/svc-ui.yml
apiVersion: v1
kind: Service
metadata:
  name: uiapp
spec:
  type: NodePort
  selector:
    app: air-team-ui
  ports:
    - port: 80
      nodePort: 32056
      targetPort: 80
      protocol: TCP
