Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: api.airimagefind.com
    http:
      paths:
      - backend:
          serviceName: apibackend
          servicePort: 80
  - host: airimagefind.com
    http:
      paths:
      - backend:
          serviceName: uiapp
          servicePort: 80
